fix label and misaligned edit button

--- a/euth_wagtail/assets/scss/components/_hero-unit.scss
+++ b/euth_wagtail/assets/scss/components/_hero-unit.scss
@@ -25,6 +25,10 @@
         top: 0;
         width: 100%;
     }
+
+    a {
+        vertical-align: top;
+    }
 }
 
 .herounit-profile {
